Booking appointment service configured to receive frontend